@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction
package "Core" #EEEEEE{
package "Domain" #DDDDDD{

class Entry {
    - List<Vehicles>
    - Team
    - StartDate
    - StartHour
    - Status
    + Entry()
    - setStartDate(startDate)
    + setEntryAgenda(startDate)
}

class Task{
    - GreenSpace
    - Integer timeExpected
}

class EntryRepository {

    + getToDoList()
    + getAgenda()
    + setEntryOnAgenda()
}

class AgendaList{
}

class ToDoList{
}


note bottom of EntryRepository
    - used for displaying
    the to do list
end note


class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getEntryRepository()
}

class EntryMapper{
    - List<EntryDto>
    + entryDtoToEntry(entryDto)
    + entryToEntryDto(entry)
    + entryListToEntryDtoList(entryList)
}

class EntryDto{
    + timeExpected
    - setStartDate(startDate)
    + setEntryAgenda(startDate)
}

class TaskDto{

    -GreenSpace
    -Integer timeExpected
}

}



package "Controller" #DDDDDD{
class AssignEntryOnAgendaController {
    - EntryRepository repository
    + AssignEntryOnAgendaController()
    + getToDoList()
    + assignEntryOnAgenda()
    - getGSMFromSession()
}
}
note right of AssignEntryOnAgendaController
    - entry is achieved with entry repository
end note

}

class GSM {
}



package "UI" #DDDDDD{
class AssignEntryOnAgendaUI {
}
}







Repositories -> Repositories : instance

AssignEntryOnAgendaUI .> AssignEntryOnAgendaController

AssignEntryOnAgendaController .> Repositories : repositories
Repositories "1" --> "1" EntryRepository

EntryRepository  ..>  EntryMapper

EntryMapper --> EntryDto

EntryDto -- TaskDto : extends


AssignEntryOnAgendaController ..> EntryRepository : EntryRepository
AssignEntryOnAgendaController ..> EntryMapper : EntryMapper

AssignEntryOnAgendaController ..> UserSession
UserSession "1" --> "1" GSM
EntryRepository "1" --> "1" AgendaList : agenda
EntryRepository "1" --> "1" ToDoList : toDo
AgendaList "1" --> "*" Entry : entry's
ToDoList "1" --> "*" Entry : entry's
EntryRepository --> "*" GSM : employs
Entry --> "*" GSM : employs
Task "1" <- "1" Entry : extends
EntryMapper "1" ..> "1" Entry


@enduml